sol.h

#define sol sol_inline
  typedef long double Float;
  typedef double Float;
  typedef float Float;
  //////////////////////////////////////////////////////////////////////////////
 // Math Constants ////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// sol_pi ///
// Description
//   The constant used to equal the value of Pi for Sol's internal calculations.

static const Float sol_pi = ((Float)(3.14159265358979323846));
/// sol_tau ///
// Description
//   A constant which is equal to two times the value of Pi for Sol's internal
//   calculations.

static const Float sol_tau = ((Float)(6.28318530717958647692));
/// sol_g ///
// Description
//   A constant which is equal to the acceleration of gravity in m/s/s.

static const Float sol_g = ((Float)(9.80665));
/// sol_c ///
// Description
//   A constant which is equal to the speed of light in m/s.

static const Float sol_c = ((Float)(299792000));
  //////////////////////////////////////////////////////////////////////////////
 // Struct Type Definitions ///////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// Vec2 ///
// Description
//   A type comprised of two floats to represent a 2D vector or position.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   f: Dimensions (Float[2])

typedef struct {
  union {
    struct {
      Float x, y;
    };
    Float f[2];
    #if defined(SOL_AVX_64)
      __m128d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x2_t neon64;
    #elif defined(SOL_NEON_32)
      f32x2_t neon32;
    #endif
  };
} Vec2;
/// Vec3 ///
// Description
//   A type comprised of three floats to represent a 3D vector or position.
// Fields
//   x: Dimension (sol_f)
//   y: Dimension (sol_f)
//   z: Dimension (sol_F)
//   f: Dimensions (Float[3])

typedef struct {
  union {
    struct {
      Float x, y, z;
    };
    Float f[3];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON_32)
      f32x4_t neon32;
    #endif
  };
} Vec3;
/// Box2 ///
// Description
//   A type comprised of two 2D positions that represent a bounding box.
// Fields
//   lower: Position (Vec2)
//   upper: Position (Vec2)

typedef struct {
  Vec2 lower, upper;
} Box2;
/// Box3 ///
// Description
//   A type comprised of two 3D positions that represent a bounding box.
// Fields
//   upper: Position (Vec3)
//   lower: Position (Vec3)

typedef struct {
  Vec3 lower, upper;
} Box3;
Box2 box2_add(Box2 a, Box2 b);
Box2 box2_addv(Box2 b, Vec2 v);
Box2 box2_addf(Box2 b, Float f);
Box2 box2_sub(Box2 a, Box2 b);
Box2 box2_subv(Box2 b, Vec2 v);
Box2 box2_vsub(Vec2 v, Box2 b);
Box2 box2_subf(Box2 b, Float f);
Box2 box2_fsub(Float f, Box2 b);
Box2 box2_mul(Box2 a, Box2 b);
Box2 box2_mulv(Box2 b, Vec2 v);
Box2 box2_mulf(Box2 b, Float f);
Box2 box2_div(Box2 a, Box2 b);
Box2 box2_divv(Box2 b, Vec2 v);
Box2 box2_vdiv(Vec2 v, Box2 b);
Box2 box2_divf(Box2 b, Float f);
Box2 box2_fdiv(Float f, Box2 b);
  //////////////////////////////////////////////////////////////////////////////
 // Box3 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Box3 box3_init(Vec3 lower, Vec3 upper);
Box3 box3_initv(Vec3 v);
Box3 box3_initf(Float f);
Box3 box3_zero(void);
Vec3 box3_pos(Box3 b);
Float box3_x(Box3 b);
Float box3_y(Box3 b);
Float box3_z(Box3 b);
bool box3_aabb(Box3 a, Box3 b);
bool box3_pip(Box3 b, Vec3 v);
Box3 box3_add(Box3 a, Box3 b);
Box3 box3_addv(Box3 b, Vec3 v);
Box3 box3_addf(Box3 b, Float f);
Box3 box3_sub(Box3 a, Box3 b);
Box3 box3_subv(Box3 b, Vec3 v);
Box3 box3_vsub(Vec3 v, Box3 b);
Box3 box3_subf(Box3 b, Float f);
Box3 box3_fsub(Float f, Box3 b);
Box3 box3_mul(Box3 a, Box3 b);
Box3 box3_mulv(Box3 b, Vec3 v);
Box3 box3_mulf(Box3 b, Float f);
Box3 box3_div(Box3 a, Box3 b);
Box3 box3_divv(Box3 b, Vec3 v);
Box3 box3_vdiv(Vec3 v, Box3 b);
Box3 box3_divf(Box3 b, Float f);
Box3 box3_fdiv(Float f, Box3 b);