sol.nim


template `+`*(a, b: Box2): Box2         = box2_add(a, b)
template `+`*(b: Box2; v: Vec2): Box2   = box2_addv(b, v)
template `+`*(v: Vec2; b: Box2): Box2   = box2_addv(b, v)
template `+`*(b: Box2; f: Float): Box2  = box2_addf(b, f)
template `+`*(f: Float; b: Box2): Box2  = box2_addf(b, f)
template `-`*(a, b: Box2): Box2         = box2_sub(a, b)
template `-`*(b: Box2; v: Vec2): Box2   = box2_subv(b, v)
template `-`*(v: Vec2; b: Box2): Box2   = box2_vsub(v, b)
template `-`*(b: Box2; f: Float): Box2  = box2_subf(b, f)
template `-`*(f: Float; b: Box2): Box2  = box2_fsub(f, b)
template `*`*(a, b: Box2): Box2         = box2_mul(a, b)
template `*`*(b: Box2; v: Vec2): Box2   = box2_mulv(b, v)
template `*`*(v: Vec2; b: Box2): Box2   = box2_mulv(b, v)
template `*`*(b: Box2; f: Float): Box2  = box2_mulf(b, f)
template `*`*(f: Float; b: Box2): Box2  = box2_mulf(b, f)
template `/`*(a, b: Box2): Box2         = box2_div(a, b)
template `/`*(b: Box2; v: Vec2): Box2   = box2_divv(b, v)
template `/`*(v: Vec2; b: Box2): Box2   = box2_vdiv(v, b)
template `/`*(b: Box2; f: Float): Box2  = box2_divf(b, f)
template `/`*(f: Float; b: Box2): Box2  = box2_fdiv(f, b)

template `+=`*(a: var Box2; b: Box2)  = a = box2_add(a, b)
template `+=`*(b: var Box2; v: Vec2)  = b = box2_addv(b, v)
template `+=`*(b: var Box2; f: Float) = b = box2_addf(b, f)
template `-=`*(a: var Box2; b: Box2)  = a = box2_sub(a, b)
template `-=`*(b: var Box2; v: Vec2)  = b = box2_subv(b, v)
template `-=`*(b: var Box2; f: Float) = b = box2_subf(b, f)
template `*=`*(a: var Box2; b: Box2)  = a = box2_mul(a, b)
template `*=`*(b: var Box2; v: Vec2)  = b = box2_mulv(b, v)
template `*=`*(b: var Box2; f: Float) = b = box2_mulf(b, f)
template `/=`*(a: var Box2; b: Box2)  = a = box2_div(a, b)
template `/=`*(b: var Box2; v: Vec2)  = b = box2_divv(b, v)
template `/=`*(a: var Box2; f: Float) = b = box2_divf(b, f)

################################################################################
# Box3 Functions ###############################################################
################################################################################

proc box3_init*(lower, upper: Vec3): Box3 {.importc: "box3_init",  header: "sol.h".}
proc box3_initv*(v: Vec3): Box3           {.importc: "box3_initv", header: "sol.h".}
proc box3_initf*(f: Float): Box3          {.importc: "box3_initf", header: "sol.h".}
proc box3_zero*(): Box3                   {.importc: "box3_zero",  header: "sol.h".}

proc box3_pos*(b: Box3): Vec3 {.importc: "box3_pos", header: "sol.h".}
proc box3_x*(b: Box3): Float  {.importc: "box3_x",   header: "sol.h".}
proc box3_y*(b: Box3): Float  {.importc: "box3_y",   header: "sol.h".}
proc box3_z*(b: Box3): Float  {.importc: "box3_z",   header: "sol.h".}

proc box3_aabb*(a, b: Box3): bool      {.importc: "box3_aabb", header: "sol.h".}
proc box3_pip*(b: Box3; v: Vec3): bool {.importc: "box3_pip",  header: "sol.h".}

proc box3_add*(a, b: Box3): Box3         {.importc: "box3_add",  header: "sol.h".}
proc box3_addv*(b: Box3; v: Vec3): Box3  {.importc: "box3_addv", header: "sol.h".}
proc box3_addf*(b: Box3; f: Float): Box3 {.importc: "box3_addf", header: "sol.h".}
proc box3_sub*(a, b: Box3): Box3         {.importc: "box3_sub",  header: "sol.h".}
proc box3_subv*(b: Box3; v: Vec3): Box3  {.importc: "box3_subv", header: "sol.h".}
proc box3_vsub*(v: Vec3; b: Box3): Box3  {.importc: "box3_vsub", header: "sol.h".}
proc box3_subf*(b: Box3; f: Float): Box3 {.importc: "box3_subf", header: "sol.h".}
proc box3_fsub*(f: Float; b: Box3): Box3 {.importc: "box3_fsub", header: "sol.h".}
proc box3_mul*(a, b: Box3): Box3         {.importc: "box3_mul",  header: "sol.h".}
proc box3_mulv*(b: Box3; v: Vec3): Box3  {.importc: "box3_mulv", header: "sol.h".}
proc box3_mulf*(b: Box3; f: Float): Box3 {.importc: "box3_mulf", header: "sol.h".}
proc box3_div*(a, b: Box3): Box3         {.importc: "box3_div",  header: "sol.h".}
proc box3_divv*(b: Box3; v: Vec3): Box3  {.importc: "box3_divv", header: "sol.h".}
proc box3_vdiv*(v: Vec3; b: Box3): Box3  {.importc: "box3_vdiv", header: "sol.h".}
proc box3_divf*(b: Box3; f: Float): Box3 {.importc: "box3_divf", header: "sol.h".}
proc box3_fdiv*(f: Float; b: Box3): Box3 {.importc: "box3_fdiv", header: "sol.h".}

################################################################################
# Box3 Operators ###############################################################
################################################################################

template `+`*(a, b: Box3): Box3        = box3_add(a, b)
template `+`*(b: Box3; v: Vec3): Box3  = box3_addv(b, v)
template `+`*(v: Vec3; b: Box3): Box3  = box3_addv(b, v)
template `+`*(b: Box3; f: Float): Box3 = box3_addf(b, f)
template `+`*(f: Float; b: Box3): Box3 = box3_addf(b, f)
template `-`*(a, b: Box3): Box3        = box3_sub(a, b)
template `-`*(b: Box3; v: Vec3): Box3  = box3_subv(b, v)
template `-`*(v: Vec3; b: Box3): Box3  = box3_vsub(v, b)
template `-`*(b: Box3; f: Float): Box3 = box3_subf(b, f)
template `-`*(f: Float; b: Box3): Box3 = box3_fsub(f, b)
template `*`*(a, b: Box3): Box3        = box3_mul(a, b)
template `*`*(b: Box3; v: Vec3): Box3  = box3_mulv(b, v)
template `*`*(v: Vec3; b: Box3): Box3  = box3_mulv(b, v)
template `*`*(b: Box3; f: Float): Box3 = box3_mulf(b, f)
template `*`*(f: Float; b: Box3): Box3 = box3_mulf(b, f)
template `/`*(a, b: Box3): Box3        = box3_div(a, b)
template `/`*(b: Box3; v: Vec3): Box3  = box3_divv(b, v)
template `/`*(v: Vec3; b: Box3): Box3  = box3_vdiv(v, b)
template `/`*(b: Box3; f: Float): Box3 = box3_divf(b, f)
template `/`*(f: Float; b: Box3): Box3 = box3_fdiv(f, b)

template `+=`*(a: var Box3; b: Box3)  = a = box3_add(a, b)
template `+=`*(b: var Box3; v: Vec3)  = b = box3_addv(b, v)
template `+=`*(b: var Box3; f: Float) = b = box3_addf(b, f)
template `-=`*(a: var Box3; b: Box3)  = a = box3_sub(a, b)
template `-=`*(b: var Box3; v: Vec3)  = b = box3_subv(b, v)
template `-=`*(b: var Box3; f: Float) = b = box3_subf(b, f)
template `*=`*(a: var Box3; b: Box3)  = a = box3_mul(a, b)
template `*=`*(b: var Box3; v: Vec3)  = b = box3_mulv(b, v)
template `*=`*(b: var Box3; f: Float) = b = box3_mulf(b, f)
template `/=`*(a: var Box3; b: Box3)  = a = box3_div(a, b)
template `/=`*(b: var Box3; v: Vec3)  = b = box3_divv(b, v)
template `/=`*(b: var Box3; f: Float) = b = box3_divf(b, f)
